[package]
name = "nablo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", optional = true }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
serde = "1.0.196"
utf8_slice = "1.0.0"
pollster = "0.3.0"
time = { version = "0.3.30", features = [ "std", "wasm-bindgen", "macros" ]}
serde_json = "1.0.108"
rayon = "1.8.0"
image = "0.24.7"
resvg = "0.37.0"
anyhow = "1.0.78"
euclid = { version = "0.22", optional = true }
wgpu = { version = "0.18.0", optional = true }
clipboard = { version = "0.5.0", optional = true }
cfg-if = "1.0.0"
nablo_shape = { path = "../nablo_shape" }
nablo_data = { path = "../nablo_data", optional = true }
thiserror = "1.0.56"
baseview = { path = "../baseview", optional = true }
keyboard-types = { version = "0.6.1", default-features = false, optional = true }
raw-window-handle = { version = "0.5", optional = true }
wgpu_text =  { version = "0.8.5", optional = true }
tiny-skia = { version = "0.11.3", optional = true }
fontdue = { version = "0.8.0", optional = true }
once_cell = "1.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.28.7", features = ["android-game-activity"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.29.15", features = ["rwh_05"], optional = true }
web-sys = { version = "0.3.64", features = [
	"Document",
	"Window",
	"Element",
]}

[features]
default = ["webgl", "info", "presets", "manager"]
manager = ["wgpu", "winit", "euclid", "clipboard", "wgpu_text", "vertexs", "raw-window-handle", "tiny-skia", "fontdue"]
baseview_manager = ["wgpu", "baseview", "raw-window-handle", "keyboard-types", "euclid", "clipboard", "wgpu_text", "vertexs", "fontdue"]
webgl = ["wgpu/webgl"]
vertexs = ["nablo_shape/vertexs"]
presets = ["nablo_data"]
info = ["log"]
